--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <main>
         <section id="login">
             <aside id="image">
+                <!--Aqui vai a imagem no CSS-->
             </aside>
             <article id="form">
                 <h1>Login</h1>
