--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=person,vpn_key" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/mediaqueries.css">
 </head>
@@ -17,18 +17,20 @@
             <article id="form">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                <!--<form action="login.php" method="post" autocomplete="on">
-                    <fieldset>
-                        <label for="user"><span class="material-symbols-outlined">person</span></label>
-                        <input type="email" name="user" id="user">
+                <form action="login.php" method="post" autocomplete="on">
+                    <fieldset class="campo">
+                        <span class="material-symbols-outlined">person</span>
+                        <input type="email" name="user" id="user" placeholder="Seu login" autocomplete="email" required>
+                        <label for="user">Login</label>
                     </fieldset>
-                    <fieldset>
-                        <label for="password"><span class="material-symbols-outlined">vpn_key</span></label>
-                        <input type="password" name="password" id="password">
+                    <fieldset class="campo">
+                        <span class="material-symbols-outlined">vpn_key</span>
+                        <input type="password" name="password" id="password" placeholder="Sua senha" autocomplete="current-password" required minlength="8">
+                        <label for="password">senha</label>
                     </fieldset>
                     <input class="btn" type="submit" value="Entrar">
-                    <a class="btn" href="">Esqueci a senha</a>
-                </form>-->
+                    <a class="btn" href="">Esqueci a senha <span class="material-symbols-outlined">mail</span></a>
+                </form>
             </article>
         </section>
     </main>
